[gd_scene load_steps=19 format=3 uid="uid://cx1bafifkl17x"]

[ext_resource type="Texture2D" uid="uid://d2meqtk7mbkf0" path="res://assets/textures/Star Background2.png" id="1_f67k2"]
[ext_resource type="Script" uid="uid://ciiwlhnmwo72u" path="res://scripts/tools/galaxy_map.gd" id="1_n1dvt"]
[ext_resource type="PackedScene" uid="uid://d3d0qkwoxcu2y" path="res://scenes/level_entities/destination_indicator.tscn" id="2_rvfec"]
[ext_resource type="PackedScene" uid="uid://c2ffdiw7qy7v0" path="res://scenes/menus_ui/system_marker.tscn" id="3_uixyg"]
[ext_resource type="FontFile" uid="uid://bxro7d3j74u0w" path="res://assets/font/ethnocentric rg it.ttf" id="4_v4uvs"]
[ext_resource type="Texture2D" uid="uid://cc0p0r7y0if3j" path="res://assets/textures/galaxy_map/federation_mask.png" id="6_8nqs0"]
[ext_resource type="Texture2D" uid="uid://b1vfpvlamicil" path="res://assets/textures/galaxy_map/romulan_mask.png" id="6_adr1o"]
[ext_resource type="Shader" uid="uid://6315ajpgvgvy" path="res://resources/Materials_Shaders/faction_color.gdshader" id="6_dyhbf"]
[ext_resource type="Texture2D" uid="uid://dr0bowl6i2leo" path="res://assets/textures/UI/warp_button.png" id="6_mpbwe"]
[ext_resource type="Texture2D" uid="uid://7qqdgpx5xqce" path="res://assets/textures/galaxy_map/klingon_mask.png" id="7_pdn8u"]
[ext_resource type="BitMap" uid="uid://b1a4bmxr7t24t" path="res://assets/textures/UI/warp_button_mask.png" id="7_xtw53"]
[ext_resource type="Texture2D" uid="uid://b62sn0p61u6jx" path="res://assets/textures/galaxy_map/GalaxyMapLines.png" id="9_adr1o"]
[ext_resource type="PackedScene" uid="uid://3crojikwy3xa" path="res://scenes/menus_ui/system_indicator.tscn" id="11_pdn8u"]
[ext_resource type="Script" path="res://scripts/menus_ui/system_label.gd" id="11_qqn77"]
[ext_resource type="LabelSettings" uid="uid://dxr76rggjriau" path="res://resources/galaxy_map_label_theme.tres" id="11_xf4cy"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qqn77"]
shader = ExtResource("6_dyhbf")
shader_parameter/mask_texture = ExtResource("6_adr1o")
shader_parameter/faction_color = Color(0.154532, 0.474697, 0.288837, 0.211765)
shader_parameter/stripe_color = Color(0.1504, 0.47, 0.288893, 0.321569)
shader_parameter/stripe_speed = 0.2
shader_parameter/stripe_spacing = 30.0
shader_parameter/stripe_width = 0.2

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xf4cy"]
shader = ExtResource("6_dyhbf")
shader_parameter/mask_texture = ExtResource("7_pdn8u")
shader_parameter/faction_color = Color(0.807929, 0.201548, 0.258497, 0.211765)
shader_parameter/stripe_color = Color(0.81, 0.2025, 0.26325, 0.286275)
shader_parameter/stripe_speed = 0.2
shader_parameter/stripe_spacing = 30.0
shader_parameter/stripe_width = 0.2

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kl0cb"]
shader = ExtResource("6_dyhbf")
shader_parameter/mask_texture = ExtResource("6_8nqs0")
shader_parameter/faction_color = Color(0.09, 0.3175, 1, 0.211765)
shader_parameter/stripe_color = Color(0.31, 0.517, 1, 0.270588)
shader_parameter/stripe_speed = 0.2
shader_parameter/stripe_spacing = 30.0
shader_parameter/stripe_width = 0.2

[node name="GalaxyMap" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_n1dvt")
selection_marker = ExtResource("2_rvfec")
systemMarker = ExtResource("3_uixyg")

[node name="mapBackground" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_f67k2")

[node name="RomulanShading" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_qqn77")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 19.0
offset_right = 19.0
grow_horizontal = 2
grow_vertical = 2

[node name="KlingonShading" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_xf4cy")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 19.0
offset_right = 19.0
grow_horizontal = 2
grow_vertical = 2

[node name="FederationShading" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_kl0cb")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 19.0
offset_right = 19.0
grow_horizontal = 2
grow_vertical = 2

[node name="nodeMap" type="TextureRect" parent="."]
layout_mode = 1
offset_right = 1931.0
offset_bottom = 1125.0
scale = Vector2(0.513265, 0.480901)
texture = ExtResource("9_adr1o")

[node name="Systems" type="Node2D" parent="."]
position = Vector2(374, 126)

[node name="Risa" parent="Systems" instance=ExtResource("11_pdn8u")]
position = Vector2(123, 44)
system_name = "Risa"

[node name="Risa" type="Label" parent="Systems/Risa"]
modulate = Color(1, 1, 0, 1)
offset_left = -18.0
offset_top = -29.0
offset_right = 20.0
offset_bottom = -15.7083
text = "Risa"
label_settings = ExtResource("11_xf4cy")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
script = ExtResource("11_qqn77")
system_name = "Risa"
metadata/_edit_use_anchors_ = true

[node name="Romulus" parent="Systems" instance=ExtResource("11_pdn8u")]
position = Vector2(404, 296)
system_name = "Romulus"

[node name="romulus" type="Label" parent="Systems/Romulus"]
modulate = Color(0, 0.968627, 0.14902, 1)
offset_left = -7.0
offset_top = -27.0
offset_right = 70.0
offset_bottom = -13.7083
theme_override_constants/outline_size = 15
text = "romulus"
label_settings = ExtResource("11_xf4cy")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
script = ExtResource("11_qqn77")
system_name = "romulus"
modulate_color = Color(0, 0.968627, 0.14902, 1)
metadata/_edit_use_anchors_ = true

[node name="Kronos" parent="Systems" instance=ExtResource("11_pdn8u")]
position = Vector2(266, -41)
system_name = "Kronos"

[node name="Kronos" type="Label" parent="Systems/Kronos"]
modulate = Color(0.834588, 0.237077, 0.164176, 1)
offset_left = -14.0
offset_top = -26.0
offset_right = 52.0
offset_bottom = -12.7083
theme_override_constants/outline_size = 15
text = "Kronos"
label_settings = ExtResource("11_xf4cy")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
script = ExtResource("11_qqn77")
system_name = "Kronos"
modulate_color = Color(0.834588, 0.237077, 0.164176, 1)
metadata/_edit_use_anchors_ = true

[node name="Solarus" parent="Systems" instance=ExtResource("11_pdn8u")]
position = Vector2(-182, 264)

[node name="Solarus" type="Label" parent="Systems/Solarus"]
modulate = Color(0.268388, 0.517802, 1, 1)
offset_left = 8.0
offset_top = -22.0
offset_right = 84.0
offset_bottom = -8.70833
theme_override_constants/outline_size = 15
text = "Solarus"
label_settings = ExtResource("11_xf4cy")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
script = ExtResource("11_qqn77")
modulate_color = Color(0.268388, 0.517802, 1, 1)
metadata/_edit_use_anchors_ = true

[node name="3" parent="Systems" instance=ExtResource("11_pdn8u")]
position = Vector2(-310, -14)
system_name = "3"

[node name="3" type="Label" parent="Systems/3"]
modulate = Color(1, 1, 0, 1)
offset_left = -16.0
offset_top = -24.0
offset_right = -5.0
offset_bottom = -10.7083
text = "3"
label_settings = ExtResource("11_xf4cy")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
script = ExtResource("11_qqn77")
system_name = "3"
metadata/_edit_use_anchors_ = true

[node name="4" parent="Systems" instance=ExtResource("11_pdn8u")]
position = Vector2(-185, 48)
system_name = "4"

[node name="4" type="Label" parent="Systems/4"]
modulate = Color(1, 1, 0, 1)
offset_left = 4.0
offset_top = -28.0
offset_right = 15.0
offset_bottom = -14.7083
text = "4"
label_settings = ExtResource("11_xf4cy")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
script = ExtResource("11_qqn77")
system_name = "4"
metadata/_edit_use_anchors_ = true

[node name="5" parent="Systems" instance=ExtResource("11_pdn8u")]
position = Vector2(-299, 79)
system_name = "5"

[node name="5" type="Label" parent="Systems/5"]
modulate = Color(1, 1, 0, 1)
offset_left = 1.0
offset_top = -25.0
offset_right = 11.0
offset_bottom = -11.7083
text = "5"
label_settings = ExtResource("11_xf4cy")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
script = ExtResource("11_qqn77")
system_name = "5"
metadata/_edit_use_anchors_ = true

[node name="6" parent="Systems" instance=ExtResource("11_pdn8u")]
position = Vector2(-158, 146)
system_name = "6"

[node name="6" type="Label" parent="Systems/6"]
modulate = Color(1, 1, 0, 1)
offset_left = 1.0
offset_top = -25.0
offset_right = 12.0
offset_bottom = -11.7083
text = "6"
label_settings = ExtResource("11_xf4cy")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
script = ExtResource("11_qqn77")
system_name = "6"
metadata/_edit_use_anchors_ = true

[node name="7" parent="Systems" instance=ExtResource("11_pdn8u")]
position = Vector2(-273, 271)
system_name = "7"

[node name="7" type="Label" parent="Systems/7"]
modulate = Color(1, 1, 0, 1)
offset_left = 4.0
offset_top = -25.0
offset_right = 14.0
offset_bottom = -11.7083
text = "7"
label_settings = ExtResource("11_xf4cy")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
script = ExtResource("11_qqn77")
system_name = "7"
metadata/_edit_use_anchors_ = true

[node name="8" parent="Systems" instance=ExtResource("11_pdn8u")]
position = Vector2(-266, 342)
system_name = "8"

[node name="8" type="Label" parent="Systems/8"]
modulate = Color(1, 1, 0, 1)
offset_left = 2.0
offset_top = -28.0
offset_right = 13.0
offset_bottom = -14.7083
text = "8"
label_settings = ExtResource("11_xf4cy")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
script = ExtResource("11_qqn77")
system_name = "8"
metadata/_edit_use_anchors_ = true

[node name="9" parent="Systems" instance=ExtResource("11_pdn8u")]
position = Vector2(-195, 380)
system_name = "9"

[node name="9" type="Label" parent="Systems/9"]
modulate = Color(1, 1, 0, 1)
offset_left = 1.0
offset_top = -25.0
offset_right = 12.0
offset_bottom = -11.7083
text = "9"
label_settings = ExtResource("11_xf4cy")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
script = ExtResource("11_qqn77")
system_name = "9"
metadata/_edit_use_anchors_ = true

[node name="10" parent="Systems" instance=ExtResource("11_pdn8u")]
position = Vector2(-42, 345)
system_name = "10"

[node name="10" type="Label" parent="Systems/10"]
modulate = Color(1, 1, 0, 1)
offset_left = -15.0
offset_top = -26.0
offset_right = 1.0
offset_bottom = -12.7083
text = "10"
label_settings = ExtResource("11_xf4cy")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
script = ExtResource("11_qqn77")
system_name = "10"
metadata/_edit_use_anchors_ = true

[node name="11" parent="Systems" instance=ExtResource("11_pdn8u")]
position = Vector2(9, 176)
system_name = "11"

[node name="11" type="Label" parent="Systems/11"]
modulate = Color(1, 1, 0, 1)
offset_left = -6.0
offset_top = -24.0
offset_right = 4.0
offset_bottom = -10.7083
text = "11"
label_settings = ExtResource("11_xf4cy")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
script = ExtResource("11_qqn77")
system_name = "11"
metadata/_edit_use_anchors_ = true

[node name="12" parent="Systems" instance=ExtResource("11_pdn8u")]
position = Vector2(74, 174)
system_name = "12"

[node name="12" type="Label" parent="Systems/12"]
modulate = Color(1, 1, 0, 1)
offset_left = -21.0
offset_top = -22.0
offset_right = -5.0
offset_bottom = -8.70833
text = "12"
label_settings = ExtResource("11_xf4cy")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
script = ExtResource("11_qqn77")
system_name = "12"
metadata/_edit_use_anchors_ = true

[node name="18" parent="Systems" instance=ExtResource("11_pdn8u")]
position = Vector2(74, 174)
system_name = "12"

[node name="12" type="Label" parent="Systems/18"]
modulate = Color(1, 1, 0, 1)
offset_left = -21.0
offset_top = -22.0
offset_right = -5.0
offset_bottom = -8.70833
text = "12"
label_settings = ExtResource("11_xf4cy")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
script = ExtResource("11_qqn77")
system_name = "12"
metadata/_edit_use_anchors_ = true

[node name="13" parent="Systems" instance=ExtResource("11_pdn8u")]
position = Vector2(73, 132)
system_name = "13"

[node name="13" type="Label" parent="Systems/13"]
modulate = Color(1, 1, 0, 1)
offset_left = 7.0
offset_top = -24.0
offset_right = 22.0
offset_bottom = -10.7083
text = "13"
label_settings = ExtResource("11_xf4cy")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
script = ExtResource("11_qqn77")
system_name = "13"
metadata/_edit_use_anchors_ = true

[node name="14" parent="Systems" instance=ExtResource("11_pdn8u")]
position = Vector2(84, 60)
system_name = "14"

[node name="14" type="Label" parent="Systems/14"]
modulate = Color(1, 1, 0, 1)
offset_left = -14.0
offset_top = -25.0
offset_right = 2.0
offset_bottom = -11.7083
text = "14"
label_settings = ExtResource("11_xf4cy")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
script = ExtResource("11_qqn77")
system_name = "14"
metadata/_edit_use_anchors_ = true

[node name="15" parent="Systems" instance=ExtResource("11_pdn8u")]
position = Vector2(-65, -30)
system_name = "15"

[node name="15" type="Label" parent="Systems/15"]
modulate = Color(1, 1, 0, 1)
offset_left = 1.0
offset_top = -25.0
offset_right = 16.0
offset_bottom = -11.7083
text = "15"
label_settings = ExtResource("11_xf4cy")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
script = ExtResource("11_qqn77")
system_name = "15"
metadata/_edit_use_anchors_ = true

[node name="16" parent="Systems" instance=ExtResource("11_pdn8u")]
position = Vector2(51, -45)
system_name = "16"

[node name="16" type="Label" parent="Systems/16"]
modulate = Color(1, 1, 0, 1)
offset_left = -3.0
offset_top = -26.0
offset_right = 13.0
offset_bottom = -12.7083
text = "16"
label_settings = ExtResource("11_xf4cy")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
script = ExtResource("11_qqn77")
system_name = "16"
metadata/_edit_use_anchors_ = true

[node name="17" parent="Systems" instance=ExtResource("11_pdn8u")]
position = Vector2(159, -108)
system_name = "17"

[node name="17" type="Label" parent="Systems/17"]
modulate = Color(1, 1, 0, 1)
offset_left = -7.0
offset_top = 11.0
offset_right = 8.0
offset_bottom = 24.2917
text = "17"
label_settings = ExtResource("11_xf4cy")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
script = ExtResource("11_qqn77")
system_name = "17"
metadata/_edit_use_anchors_ = true

[node name="19" parent="Systems" instance=ExtResource("11_pdn8u")]
position = Vector2(204, 116)
system_name = "19"

[node name="19" type="Label" parent="Systems/19"]
modulate = Color(1, 1, 0, 1)
offset_left = 1.0
offset_top = -25.0
offset_right = 17.0
offset_bottom = -11.7083
text = "19"
label_settings = ExtResource("11_xf4cy")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
script = ExtResource("11_qqn77")
system_name = "19"
metadata/_edit_use_anchors_ = true

[node name="20" parent="Systems" instance=ExtResource("11_pdn8u")]
position = Vector2(263, 83)
system_name = "20"

[node name="20" type="Label" parent="Systems/20"]
modulate = Color(1, 1, 0, 1)
offset_left = 7.0
offset_top = -23.0
offset_right = 28.0
offset_bottom = -9.70833
text = "20"
label_settings = ExtResource("11_xf4cy")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
script = ExtResource("11_qqn77")
system_name = "20"
metadata/_edit_use_anchors_ = true

[node name="21" parent="Systems" instance=ExtResource("11_pdn8u")]
position = Vector2(372, 4)
system_name = "21"

[node name="21" type="Label" parent="Systems/21"]
modulate = Color(1, 1, 0, 1)
offset_left = -10.0
offset_top = -24.0
offset_right = 6.0
offset_bottom = -10.7083
text = "21"
label_settings = ExtResource("11_xf4cy")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
script = ExtResource("11_qqn77")
system_name = "21"
metadata/_edit_use_anchors_ = true

[node name="22" parent="Systems" instance=ExtResource("11_pdn8u")]
position = Vector2(445, -73)
system_name = "22"

[node name="22" type="Label" parent="Systems/22"]
modulate = Color(1, 1, 0, 1)
offset_left = -10.0
offset_top = -25.0
offset_right = 11.0
offset_bottom = -11.7083
text = "22"
label_settings = ExtResource("11_xf4cy")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
script = ExtResource("11_qqn77")
system_name = "22"
metadata/_edit_use_anchors_ = true

[node name="23" parent="Systems" instance=ExtResource("11_pdn8u")]
position = Vector2(504, 8)
system_name = "23"

[node name="23" type="Label" parent="Systems/23"]
modulate = Color(1, 1, 0, 1)
offset_left = -6.0
offset_top = -26.0
offset_right = 15.0
offset_bottom = -12.7083
text = "23"
label_settings = ExtResource("11_xf4cy")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
script = ExtResource("11_qqn77")
system_name = "23"
metadata/_edit_use_anchors_ = true

[node name="24" parent="Systems" instance=ExtResource("11_pdn8u")]
position = Vector2(434, 83)
system_name = "24"

[node name="24" type="Label" parent="Systems/24"]
modulate = Color(1, 1, 0, 1)
offset_left = -9.0
offset_top = -30.0
offset_right = 12.0
offset_bottom = -16.7083
text = "24"
label_settings = ExtResource("11_xf4cy")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
script = ExtResource("11_qqn77")
system_name = "24"
metadata/_edit_use_anchors_ = true

[node name="25" parent="Systems" instance=ExtResource("11_pdn8u")]
position = Vector2(490, 157)
system_name = "25"

[node name="25" type="Label" parent="Systems/25"]
modulate = Color(1, 1, 0, 1)
offset_left = 1.0
offset_top = -25.0
offset_right = 22.0
offset_bottom = -11.7083
text = "25"
label_settings = ExtResource("11_xf4cy")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
script = ExtResource("11_qqn77")
system_name = "25"
metadata/_edit_use_anchors_ = true

[node name="26" parent="Systems" instance=ExtResource("11_pdn8u")]
position = Vector2(317, 204)
system_name = "26"

[node name="26" type="Label" parent="Systems/26"]
modulate = Color(1, 1, 0, 1)
offset_left = -5.0
offset_top = -33.0
offset_right = 16.0
offset_bottom = -19.7083
text = "26"
label_settings = ExtResource("11_xf4cy")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
script = ExtResource("11_qqn77")
system_name = "26"
metadata/_edit_use_anchors_ = true

[node name="27" parent="Systems" instance=ExtResource("11_pdn8u")]
position = Vector2(201, 225)
system_name = "27"

[node name="27" type="Label" parent="Systems/27"]
modulate = Color(1, 1, 0, 1)
offset_left = 6.0
offset_top = -23.0
offset_right = 26.0
offset_bottom = -9.70833
text = "27"
label_settings = ExtResource("11_xf4cy")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
script = ExtResource("11_qqn77")
system_name = "27"
metadata/_edit_use_anchors_ = true

[node name="28" parent="Systems" instance=ExtResource("11_pdn8u")]
position = Vector2(181, 303)
system_name = "28"

[node name="28" type="Label" parent="Systems/28"]
modulate = Color(1, 1, 0, 1)
offset_left = 9.0
offset_top = -20.0
offset_right = 30.0
offset_bottom = -6.70833
text = "28"
label_settings = ExtResource("11_xf4cy")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
script = ExtResource("11_qqn77")
system_name = "28"
metadata/_edit_use_anchors_ = true

[node name="1" parent="Systems" instance=ExtResource("11_pdn8u")]
position = Vector2(-289, -77)
system_name = "1"

[node name="1" type="Label" parent="Systems/1"]
modulate = Color(1, 1, 0, 1)
offset_top = 10.0
offset_right = 10.0
offset_bottom = 23.2917
text = "1"
label_settings = ExtResource("11_xf4cy")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
script = ExtResource("11_qqn77")
system_name = "1"
metadata/_edit_use_anchors_ = true

[node name="2" parent="Systems" instance=ExtResource("11_pdn8u")]
position = Vector2(-203, -53)
system_name = "2"

[node name="2" type="Label" parent="Systems/2"]
modulate = Color(1, 1, 0, 1)
offset_left = -1.0
offset_top = -23.0
offset_right = 10.0
offset_bottom = -9.70833
text = "2"
label_settings = ExtResource("11_xf4cy")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
script = ExtResource("11_qqn77")
system_name = "2"
metadata/_edit_use_anchors_ = true

[node name="29" parent="Systems" instance=ExtResource("11_pdn8u")]
position = Vector2(258, 316)
system_name = "29"

[node name="29" type="Label" parent="Systems/29"]
modulate = Color(1, 1, 0, 1)
offset_left = -18.0
offset_top = -26.0
offset_right = 3.0
offset_bottom = -12.7083
text = "29"
label_settings = ExtResource("11_xf4cy")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
script = ExtResource("11_qqn77")
system_name = "29"
metadata/_edit_use_anchors_ = true

[node name="30" parent="Systems" instance=ExtResource("11_pdn8u")]
position = Vector2(482, 295)
system_name = "30"

[node name="30" type="Label" parent="Systems/30"]
modulate = Color(1, 1, 0, 1)
offset_left = 8.0
offset_top = 12.0
offset_right = 29.0
offset_bottom = 25.2917
text = "30"
label_settings = ExtResource("11_xf4cy")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
script = ExtResource("11_qqn77")
system_name = "30"

[node name="31" parent="Systems" instance=ExtResource("11_pdn8u")]
position = Vector2(474, 364)
system_name = "31"

[node name="31" type="Label" parent="Systems/31"]
modulate = Color(1, 1, 0, 1)
offset_left = 7.0
offset_top = 10.0
offset_right = 22.0
offset_bottom = 23.2917
text = "31"
label_settings = ExtResource("11_xf4cy")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
script = ExtResource("11_qqn77")
system_name = "31"

[node name="CloseContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="closeMenuButton" type="Button" parent="CloseContainer"]
custom_minimum_size = Vector2(40, 30)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "X"

[node name="mission_message" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 236.0
offset_top = 516.0
offset_right = 794.0
offset_bottom = 538.0
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("4_v4uvs")
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "Current mission: [color=#FFCC66]None[/color]"
scroll_active = false
autowrap_mode = 2
shortcut_keys_enabled = false
drag_and_drop_selection_enabled = false

[node name="current_system_message" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 26.0
offset_top = 12.0
offset_right = 446.0
offset_bottom = 34.0
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("4_v4uvs")
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "Current destination: [color=#FFCC66]None[/color]"
scroll_active = false
autowrap_mode = 2
shortcut_keys_enabled = false
drag_and_drop_selection_enabled = false

[node name="warp_button" type="Control" parent="."]
anchors_preset = 0
offset_left = 377.0
offset_top = 447.0
offset_right = 567.0
offset_bottom = 509.0

[node name="TextureRect" type="TextureRect" parent="warp_button"]
layout_mode = 1
anchors_preset = -1
offset_top = 0.0400085
offset_right = 482.0
offset_bottom = 480.04
scale = Vector2(0.394, 0.13)
mouse_filter = 2
texture = ExtResource("6_mpbwe")

[node name="click_area" type="TextureButton" parent="warp_button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.52588e-05
offset_right = 292.0
offset_bottom = 418.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.394, 0.13)
texture_click_mask = ExtResource("7_xtw53")

[node name="RichTextLabel" type="RichTextLabel" parent="warp_button"]
layout_mode = 1
offset_left = 21.0
offset_top = 13.0
offset_right = 325.0
offset_bottom = 95.0
scale = Vector2(0.5, 0.5)
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("4_v4uvs")
theme_override_font_sizes/normal_font_size = 60
bbcode_enabled = true
text = "[color=#000000] WARP"

[connection signal="pressed" from="CloseContainer/closeMenuButton" to="." method="_on_close_menu_button_pressed"]
[connection signal="pressed" from="warp_button/click_area" to="." method="_on_warp_button_pressed"]
